[package]
name = "goose_pcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.15"
crossbeam-queue = "0.3.11"
libc = "0.2.177"
num_cpus = "1.17.0"
pnet = "0.35.0"
pnet_datalink = "0.35.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "2.0.1"
serde_json = "1.0.145"
csv = "1.4.0"
chrono = "0.4.42"
log = "0.4.28"
log4rs = "1.4.0"
socket2 = "0.6.1"
config = "0.15.19"
dashmap = "6.1.0"
anyhow = "1.0"




[dev-dependencies]
tempfile = "3.3"
